# fspy

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: quality.yml  test.yml
fspy/: scrapper.py
test/: test_fspy.py
